# jaffle-shop

./: .gitignore  README.md  config.py  dbt_project.yml  hello.py  local.duckdb.wal  mpire_test.py  package-lock.yml  profiles.yml  pyproject.toml  requirements.txt
jaffle-data/: properties.yml
models/marts/: metricflow_time_spine.sql  top_locations.sql
models/marts/customer360/: customers.sql  order_items.sql  orders.sql
models/staging/: stg_customers.sql  stg_locations.sql  stg_locations.yml  stg_order_items.sql  stg_orders.sql  stg_orders.yml  stg_products.sql  stg_products_data_diff.sql  stg_products_data_diff.yml  stg_supplies.sql  testing.sql
models/testing/: stg_products_data_diff.sql
profiles/bigquery/: profiles.yml
profiles/duckdb/: .user.yml  profiles.yml
profiling/: profiling.py
profiling/profiles/: get_adjust_query.html  get_catalog.html  plan_models.html  transform_test.html
