[project]
name = "jaffle-shop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-bigquery~=1.8.0",
    "dbt-core~=1.8.0",
    "dbt-duckdb~=1.8.0",
    "dbtx>=0.0.3",
    "dill>=0.3.9",
    "duckdb>=1.1.3",
    "pytest>=8.3.4",
    "sqlmesh[bigquery,dbt,web]>=0.141.1",
]


[dependency-groups]
dev = ["pyinstrument>=5.0.0"]
